fixed sidebar height on mobile v4

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -52,6 +52,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-light--2);
+  background-color: var(--color-dark--1);
   font-family: 'Manrope', sans-serif;
 
   overscroll-behavior-y: none;
