--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -13,8 +13,8 @@
   @media screen and (max-width: $bp-small) {
     position: absolute;
     width: 47.6rem;
-    height: 50vh;
-    height: calc(var(--vh, 1vh) * 50);
+    height: 45vh;
+    height: calc(var(--vh, 1vh) * 45);
     right: 0;
     top: 0;
     z-index: 500;
@@ -22,9 +22,9 @@
   @media screen and (max-width: $bp-smallest) {
     position: static;
     width: 100vw;
-    height: 35vh;
+    height: 45vh;
     flex-basis: auto;
-    height: calc(var(--vh, 1vh) * 40);
+    height: calc(var(--vh, 1vh) * 45);
     padding: 2rem calc((100vw - 41.6rem) / 2) 2.5rem;
   }
 }
